--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
+monitor_speed = 115200
 lib_deps =
     bodmer/TFT_eSPI@^2.5.31
     FS
