--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = nodemcu-32s
 framework = arduino
 monitor_speed = 115200
+monitor_filters = esp32_exception_decoder
 lib_deps =
     bodmer/TFT_eSPI@^2.5.31
     FS
@@ -20,3 +21,4 @@ lib_deps =
     SPIFFS
     stevesch/stevesch-MathVec@^0.2.0
     stevesch/stevesch-MathBase@^0.2.0
+    robtillaart/float16@^0.1.7
